[package]
name = "bitcoind-tests"
version = "0.1.0"
authors = ["sanket1729 <sanket1729@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniscript = {path = "../"}
node = { package = "corepc-node", version = "0.7.0", default-features = false }
actual-rand = { package = "rand", version = "0.8.4"}
secp256k1 = {version = "0.29.0", features = ["rand-std"]}

[features]
# Enable the same feature in `corepc`.

# Test all minor releases of the latest three versions.
"28_0" = ["node/28_0"]
"27_2" = ["node/27_2"]
"27_1" = ["node/27_1"]
"27_0" = ["node/27_0"]
"26_2" = ["node/26_2"]
"26_1" = ["node/26_1"]
"26_0" = ["node/26_0"]
# Only the latest minor version for older versions.
"25_2" = ["node/25_2"]
"24_2" = ["node/24_2"]
"23_2" = ["node/23_2"]
"22_1" = ["node/22_1"]
"0_21_2" = ["node/0_21_2"]
"0_20_2" = ["node/0_20_2"]
"0_19_1" = ["node/0_19_1"]
"0_18_1" = ["node/0_18_1"]
"0_17_1" = ["node/0_17_1"]

# Patch crates from corepc repo.

[patch.crates-io.corepc-client]
git = "https://github.com/tcharding/corepc"
branch = "bitcoin-alpha"

[patch.crates-io.corepc-node]
git = "https://github.com/tcharding/corepc"
branch = "bitcoin-alpha"

[patch.crates-io.corepc-types]
git = "https://github.com/tcharding/corepc"
branch = "bitcoin-alpha"

# Patch rust-bitcoin crates.

[patch.crates-io.base58ck]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "alpha"

[patch.crates-io.bitcoin]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "alpha"

[patch.crates-io.bitcoin_hashes]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "alpha"

[patch.crates-io.bitcoin-internals]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "alpha"

[patch.crates-io.bitcoin-io]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "alpha"

[patch.crates-io.bitcoin-primitives]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "alpha"

[patch.crates-io.bitcoin-units]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "alpha"
